--- a/sola_grey/gtk-3.0/gtk.css
+++ b/sola_grey/gtk-3.0/gtk.css
@@ -1,9 +1,9 @@
 /* default color scheme */
 @define-color bg_color #cecece;
-@define-color fg_color #3c3c3c;
+@define-color fg_color #555;
 @define-color base_color #fcfcfc;
-@define-color text_color #212121;
-@define-color selected_bg_color #65ab95;
+@define-color text_color #555;
+@define-color selected_bg_color #9bbebe;
 @define-color selected_fg_color #fff;
 @define-color tooltip_bg_color #eee;
 @define-color tooltip_fg_color #333;
